--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -21,7 +21,7 @@
                     </div>
                   <!-- <div class="form-label-group">
                     <p>Role:</p>
-                    <select class="form-control" name="role" id="inputRole" required [(ngModel)]="form.role" autofocus>
+                    <select class="form-control pt-1" name="role" id="inputRole" required [(ngModel)]="form.role" autofocus>
                         <option value="CompanyAdmin">CompanyAdmin</option>
                       </select>
                     </div> -->
