--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -166,7 +166,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6" *ngIf="isParentorStudent || isTeacher">
+          <div class="col-xl-3 col-md-6" *ngIf="isParentorStudent">
               <div class="card card-stats shadow mb-4 mb-xl-0">
                 <div class="card-body">
                   <div class="row">
@@ -396,7 +396,7 @@
       </div>
     </div>
   </div>
-  <div class="row mt-5">
+  <!-- <div class="row mt-5">
     <div class="col-xl-8 mb-5 mb-xl-0">
       <div class="card shadow">
         <div class="card-header border-0">
@@ -410,7 +410,6 @@
           </div>
         </div>
         <div class="table-responsive">
-          <!-- Projects table -->
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
@@ -509,7 +508,6 @@
           </div>
         </div>
         <div class="table-responsive">
-          <!-- Projects table -->
           <table class="table align-items-center table-flush">
             <thead class="thead-light">
               <tr>
@@ -614,7 +612,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 </div>
 <!--
