--- a/src/app/components/notice/notice.component.html
+++ b/src/app/components/notice/notice.component.html
@@ -1,7 +1,7 @@
 <div class="container my-4">
     <div class="card shadow">
       <div class="card-body">
-          <div class="col-md-3 col-6 text-right float-right mb-4" *ngIf="isTeacher">
+          <div class="col-md-3 col-6 text-right float-right mb-4" *ngIf="isTeacher || isAdmin">
               <a class="text-white btn btn-info mr-5" (click)='add()'>Add New Notice</a>
             </div><br><br><br>
         <div class="card" *ngFor="let n of notices">
@@ -19,3 +19,104 @@
       </div>
   </div>
 </div>
+
+
+
+
+    <!-- The Modal -->
+    <div id="editModal" class="modal" style="background-color: rgb(0,0,0); background-color: rgba(0,0,0,0.4);">
+
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Edit Notice</h5>
+                <button type="button" class="close" (click)='closeEditModal()'>
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                  <div class="alert alert-danger" [hidden]="!error.title">
+                      {{ error.title }}
+                    </div>
+                  <div class="alert alert-danger" [hidden]="!error.content">
+                      {{ error.content }}
+                    </div>
+                    <div class="alert alert-danger" [hidden]="!error.isRoleBased">
+                        {{ error.isRoleBased }}
+                      </div>
+                <form #newUserForm=ngForm>
+                  <div class="form-group">
+                      <label for="name">Title</label>
+                      <input type="text" class="form-control" id="name" name="title" placeholder="Enter Title"  required [(ngModel)]="data.title"/>
+                  </div>
+                  <div class="form-group">
+                      <label for="name">Content</label>
+                      <textarea type="text" class="form-control" id="name" name="content" placeholder="Enter Notice"  required [(ngModel)]="data.content" rows="10"></textarea>
+                  </div>
+                  <!-- <div class="form-group">
+                      <label for="name">To</label>
+                        <div class="radio">
+                            <label *ngIf="isAdmin"><input type="radio" name="to" [(ngModel)]="{{data.to}}" value="Teacher" required> Teacher </label>
+                            <label><input type="radio" name="to" [(ngModel)]="{{data.to}}" value="Parent" required> Parent </label>
+                          <label><input type="radio" name="to" [(ngModel)]="{{data.to}}" value="Student" required> Student </label>
+                        </div>
+                  </div> -->
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-primary"  [disabled]="!newUserForm.valid" (click)='editsubmit()'>Save changes</button>
+                <button type="button" class="btn btn-secondary" (click)='closeEditModal()'>Close</button>
+              </div>
+            </div>
+          </div>
+
+    </div>
+
+    <!-- The Modal -->
+    <div id="addModal" class="modal" style="background-color: rgb(0,0,0); background-color: rgba(0,0,0,0.4);">
+
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">Add New Notice</h5>
+                <button type="button" class="close" (click)='closeAddModal()'>
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                  <div class="alert alert-danger" [hidden]="!error.title">
+                      {{ error.title }}
+                    </div>
+                  <div class="alert alert-danger" [hidden]="!error.content">
+                      {{ error.content }}
+                    </div>
+                    <div class="alert alert-danger" [hidden]="!error.isRoleBased">
+                        {{ error.isRoleBased }}
+                      </div>
+                <form #editUserForm=ngForm>
+                    <div class="form-group">
+                        <label for="name">Title</label>
+                        <input type="text" class="form-control" id="name" name="title" placeholder="Enter Title"  required [(ngModel)]="data.title"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Content</label>
+                        <textarea type="text" class="form-control" id="name" name="content" placeholder="Enter Notice"  required [(ngModel)]="data.content"></textarea>
+                    </div>
+                    <div class="form-group">
+                      <label for="name">To</label>
+                        <div class="radio">
+                            <label *ngIf="isAdmin"><input type="radio" name="to" [(ngModel)]="data.to" value="4"/> Teacher </label><br>
+                            <label><input type="radio" name="to" [(ngModel)]="data.to" value="5"/> Parent </label><br>
+                            <label><input type="radio" name="to" [(ngModel)]="data.to" value="6"/> Student </label><br>
+                        </div>
+                    </div>
+                </form>
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" (click)='addModalSubmit()' [disabled]="!editUserForm.valid">Save changes</button>
+                <button type="button" class="btn btn-secondary" (click)='closeAddModal()'>Close</button>
+              </div>
+            </div>
+          </div>
+    </div>
